--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,18 +4,31 @@ html
     title= title
     link(rel='stylesheet', href="/stylesheets/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/javascripts/jquery-2.0.3.min.js")
+    script(src="/javascripts/bootstrap.min.js")
   body
     nav.navbar.navbar-default('role'='navigation')
       div.navbar-header
         ul.nav.navbar-nav.navbar-right
           li
-            a("href"="/") Home
+            a(href="/") Home
           li
-            a("href"="/about") About
+            a(href="/about") About
           li
-            a("href"="/contact") Contact
+            a(href="/contact") Contact
           li
-            a("href"="/drop") Drop
+            a(href="/drop") Drop
+          li.dropdown
+            a.dropdown-toggle(href="#", data-toggle="dropdown") Pages
+              b.caret
+            ul.dropdown-menu
+              li
+                a(href="/drop") One
+              li
+                a(href="/drop") Two
+              li
+                a(href="/drop") Three
+
 
     div.container
       div.row
